# med-dbscan-standard-ti-vptree

./: .gitignore  CMakeLists.txt  README.md  run.sh
data/: DS-850.arff  simple2D.csv
include/: analyzer.hpp  consts.hpp  dbscan.hpp  dbscan_vp_tree.h  math.hpp  node.hpp  parser.hpp  reader.hpp  vp_tree.hpp
results/euclidean/complex/: out_DBSCAN_data_D2_R3031_mP5_E10.000000.txt  out_TI-DBSCAN_data_D2_R3031_mP5_E10.000000.txt  out_TI-DBSCAN_data_D2_R3031_mP5_E10.000000_customLabels.txt  out_TI-DBSCAN_data_D2_R3031_mP5_E10.000000_rMax.txt  out_TI-DBSCAN_data_D2_R3031_mP5_E10.000000_rMin.txt  out_VP-DBSCAN_data_D2_R3031_mP5_E10.000000.txt  stat_DBSCAN_data_D2_R3031_mP5_E10.000000.txt  stat_TI-DBSCAN_data_D2_R3031_mP5_E10.000000.txt  stat_TI-DBSCAN_data_D2_R3031_mP5_E10.000000_customLabels.txt  stat_TI-DBSCAN_data_D2_R3031_mP5_E10.000000_rMax.txt  stat_TI-DBSCAN_data_D2_R3031_mP5_E10.000000_rMin.txt  stat_VP-DBSCAN_data_D2_R3031_mP5_E10.000000.txt
results/euclidean/ds850/: out_DBSCAN_data_D2_R850_mP5_E0.450000.txt  out_TI-DBSCAN_data_D2_R850_mP5_E0.450000.txt  out_TI-DBSCAN_data_D2_R850_mP5_E0.450000_customLabels.txt  out_TI-DBSCAN_data_D2_R850_mP5_E0.450000_rMax.txt  out_TI-DBSCAN_data_D2_R850_mP5_E0.450000_rMin.txt  out_VP-DBSCAN_data_D2_R850_mP5_E0.450000.txt  stat_DBSCAN_data_D2_R850_mP5_E0.450000.txt  stat_TI-DBSCAN_data_D2_R850_mP5_E0.450000.txt  stat_TI-DBSCAN_data_D2_R850_mP5_E0.450000_rMax.txt  (+3 more)
scripts/: 2d_visualizer.py  requirements.txt
src/: analyzer.cpp  dbscan.cpp  dbscan_vp_tree.cpp  main.cpp  math.cpp  node.cpp  parser.cpp  reader.cpp  vp_tree.cpp
(+36 files in other folders)
